2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE):Fix a NULL pointer
	dereference.
	Reported by: qwertial.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c: Fix prefix detection.

2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_show_help): Fix a NULL pointer
	dereference.
	Reported by: qwertial.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Add a comment about usefullness of nativedisk.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/nativedisk.c: Ignore unknown filesystem error.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	New command `nativedisk'.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/lzopio.c: Use GRUB_PROPERLY_ALIGNED_ARRAY.
	* grub-core/loader/i386/bsd.c: Likewise.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c: Fix compilation for amd64 (format warnings).

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/efi/api.h (GRUB_EFI_DEVICE_PATH_LENGTH): Use
	grub_get_unaligned16 rather than shifts.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/file.c: Use const char * rather than casting to
	non-const.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/probe.c: Add missing grub_device_close.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Document linguas.sh.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove POTFILES.in and regenerate it in autogen.sh.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Move --directory/--override-directorry to grub-install_header and unify.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/morse.c: Macroify dih and dah.

2013-04-27  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>
