@@ -1,5 +1,10 @@
 2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/script/execute.c (grub_script_arglist_to_argv): Fix
+	handling of variables containing backslash.
+
+2013-04-29  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/list.h (FOR_LIST_ELEMENTS_SAFE):Fix a NULL pointer
 	dereference.
 	Reported by: qwertial.
